tests/ui/rfcs/rfc-2632-const-trait-impl/effects/no-explicit-const-params-cross-crate.stderr
error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params-cross-crate.rs:14:5
   |
LL |     foo::<false>();
   |     ^^^--------- help: remove the unnecessary generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/auxiliary/cross-crate.rs:5:14
   |
LL | pub const fn foo() {}
   |              ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params-cross-crate.rs:16:12
   |
LL |     <() as Bar<false>>::bar();
   |            ^^^ expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/auxiliary/cross-crate.rs:8:11
   |
LL | pub trait Bar {
   |           ^^^
help: replace the generic bound with the associated type
   |
LL |     <() as Bar< = false>>::bar();
   |                 +

error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params-cross-crate.rs:7:5
   |
LL |     foo::<true>();
   |     ^^^-------- help: remove the unnecessary generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/auxiliary/cross-crate.rs:5:14
   |
LL | pub const fn foo() {}
   |              ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params-cross-crate.rs:9:12
   |
LL |     <() as Bar<true>>::bar();
   |            ^^^ expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/auxiliary/cross-crate.rs:8:11
   |
LL | pub trait Bar {
   |           ^^^
help: replace the generic bound with the associated type
   |
LL |     <() as Bar< = true>>::bar();
   |                 +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0107`.
